-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P4
-
Affects Version/s: 11, 14
-
Component/s: security-libs
-
b16
-
generic
-
generic
-
Not verified
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8241429 | 13.0.3 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
| JDK-8232521 | 11.0.6-oracle | Matthias Baesken | P4 | Resolved | Fixed | b02 |
| JDK-8234252 | 11.0.6 | Matthias Baesken | P4 | Resolved | Fixed | b04 |
| JDK-8268476 | openjdk8u312 | Matthias Baesken | P4 | Resolved | Fixed | b01 |
The native pkcs11 coding located at jdk.crypto.cryptoki/share/native/libj2pkcs11
contains optional tracing code that can be enabled by the compile time flag P11_DEBUG (see pkcs11wrapper.h).
However it turned out that when enabling the tracing by setting P11_DEBUG (for instance in case of issues with pkcs11 related jtreg tests on some systems), the build fails because of various issues in the (otherwise disabled) tracing code.
contains optional tracing code that can be enabled by the compile time flag P11_DEBUG (see pkcs11wrapper.h).
However it turned out that when enabling the tracing by setting P11_DEBUG (for instance in case of issues with pkcs11 related jtreg tests on some systems), the build fails because of various issues in the (otherwise disabled) tracing code.
- backported by
-
JDK-8232521 fix pkcs11 P11_DEBUG guarded native traces
-
- Resolved
-
-
JDK-8234252 fix pkcs11 P11_DEBUG guarded native traces
-
- Resolved
-
-
JDK-8241429 fix pkcs11 P11_DEBUG guarded native traces
-
- Resolved
-
-
JDK-8268476 fix pkcs11 P11_DEBUG guarded native traces
-
- Resolved
-