8231222: fix pkcs11 P11_DEBUG guarded native traces

Reviewed-by: clanger